--- a/index.html
+++ b/index.html
@@ -4,12 +4,40 @@
 <head>
   <link href="css/styles.css" rel="stylesheet" type="text/css">
   <script src="js/scripts.js"></script>
-  <title>Movie Tickets</title>
+  <title>Pizza Parlor</title>
 </head>
 
 <body>
   <h1>Pizza Parlor</h1>
   <form id="pizza-order">
+    <h3>Choose your toppings:</h3>
+
+    <input type="checkbox" id="cheese" checked>
+    <label for="cheese">Cheese</label><br>
+
+    <input type="checkbox" id="pepperoni">
+    <label for="pepperoni">Pepperoni</label><br>
+
+    <h3>Premium toppings (+$) : </h3>
+    <input type="checkbox" id="chicken">
+    <label for="chicken">Chicken</label><br>
+    <input type="checkbox" id="bacon">
+    <label for="bacon">Bacon</label><br>
+
+    <h3>Select your Size:</h3>
+    <input type="radio" id="x-small" name="size" checked>
+    <label for="x-small">X-Small</label><br>
+    <input type="radio" id="small" name="size">
+    <label for="small">Small</label><br>
+    <input type="radio" id="medium" name="size">
+    <label for="medium">Medium</label><br>
+    <input type="radio" id="large" name="size">
+    <label for="large">Large</label><br>
+    <input type="radio" id="x-large" name="size">
+    <label for="x-large">X-Large</label><br>
+
+
+
 
   </form>
 </body>
