add UI function to loop through each checkbox result to find answer and return it to variable

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   <form id="pizza-order">
 
     <h3>Choose your toppings:</h3>
-    <input type="checkbox" id="cheese" checked>
+    <input type="checkbox" id="cheese" name="cheese" checked>
     <label for="cheese">Cheese</label><br>
-    <input type="checkbox" id="pepperoni">
+    <input type="checkbox" id="pepperoni" name="pepperoni">
     <label for="pepperoni">Pepperoni</label><br>
 
     <h3>Premium toppings (+ 3$) : </h3>
