--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
     <label for="bacon">Bacon</label><br>
 
     <h3>Select your Size:</h3>
-    <input type="radio" id="x-small" name="size" checked>
+    <input type="radio" id="x-small" name="size">
     <label for="x-small">X-Small</label><br>
     <input type="radio" id="small" name="size">
     <label for="small">Small</label><br>
-    <input type="radio" id="medium" name="size">
+    <input type="radio" id="medium" name="size" checked>
     <label for="medium">Medium</label><br>
     <input type="radio" id="large" name="size">
     <label for="large">Large</label><br>
