--- a/index.html
+++ b/index.html
@@ -4,28 +4,40 @@
 <head>
   <link href="css/styles.css" rel="stylesheet" type="text/css">
   <script src="js/scripts.js"></script>
-  <title>Pizza Parlor</title>
+  <title>Papa's Pizza</title>
 </head>
 
 <body>
-  <h1>Pizza Parlor</h1>
+  <h1>Papa's Pizza</h1>
   <form id="pizza-order">
 
-    <h3>Choose your toppings:</h3>
+    <h3>Choose your toppings (+ $1 each) : </h3>
     <input type="checkbox" id="cheese" name="cheese" checked>
-    <label for="cheese">Cheese</label><br>
+    <label for="cheese">Extra Cheese</label><br>
     <input type="checkbox" id="pepperoni" name="pepperoni">
     <label for="pepperoni">Pepperoni</label><br>
+    <input type="checkbox" id="pineapple">
+    <label for="pineapple">Pineapple</label><br>
 
-    <h3>Premium toppings (+ 3$) : </h3>
+    <h3>Premium toppings (+ $3 each) : </h3>
     <input type="checkbox" id="chicken">
     <label for="chicken">Chicken</label><br>
     <input type="checkbox" id="bacon">
     <label for="bacon">Bacon</label><br>
+    <input type="checkbox" id="sausage">
+    <label for="sausage">Sausage</label><br>
 
-    <h3>Select your Size:</h3>
+    <h3>Free toppings: </h3>
+    <input type="checkbox" id="peppers">
+    <label for="peppers">Peppers</label><br>
+    <input type="checkbox" id="spinach">
+    <label for="spinach">Spinach</label><br>
+    <input type="checkbox" id="onions">
+    <label for="onions">Onions</label><br>
+
+    <h3>Select your Size: </h3>
     <input type="radio" id="x-small" name="size">
-    <label for="x-small">X-Small</label><br>
+    <label for="x-small">X-Small (- $2)</label><br>
     <input type="radio" id="small" name="size">
     <label for="small">Small</label><br>
     <input type="radio" id="medium" name="size" checked>
@@ -33,7 +45,7 @@
     <input type="radio" id="large" name="size">
     <label for="large">Large</label><br>
     <input type="radio" id="x-large" name="size">
-    <label for="x-large">X-Large</label><br><br>
+    <label for="x-large">X-Large (+ $2)</label><br><br>
 
     <button type="submit">See your total</button>
   </form>
