--- a/index.html
+++ b/index.html
@@ -2,52 +2,60 @@
 <html lang="en-US">
 
 <head>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link href="css/styles.css" rel="stylesheet" type="text/css">
   <script src="js/scripts.js"></script>
   <title>Papa's Pizza</title>
 </head>
 
 <body>
-  <h1>Papa's Pizza</h1>
+  <h1 id="header">Papa's Pizza</h1>
   <form id="pizza-order">
+    <div class="toppings">
+      <h3>Choose Your Toppings (+ $1 each)</h3>
+      <input type="checkbox" id="cheese" name="cheese" checked>
+      <label for="cheese">Extra Cheese</label><br>
+      <input type="checkbox" id="pepperoni" name="pepperoni">
+      <label for="pepperoni">Pepperoni</label><br>
+      <input type="checkbox" id="pineapple">
+      <label for="pineapple">Pineapple</label><br>
+    </div>
 
-    <h3>Choose your toppings (+ $1 each) : </h3>
-    <input type="checkbox" id="cheese" name="cheese" checked>
-    <label for="cheese">Extra Cheese</label><br>
-    <input type="checkbox" id="pepperoni" name="pepperoni">
-    <label for="pepperoni">Pepperoni</label><br>
-    <input type="checkbox" id="pineapple">
-    <label for="pineapple">Pineapple</label><br>
+    <div class="premium">
+      <h3>Premium Toppings (+ $3 each)</h3>
+      <input type="checkbox" id="chicken">
+      <label for="chicken">Chicken</label><br>
+      <input type="checkbox" id="bacon">
+      <label for="bacon">Bacon</label><br>
+      <input type="checkbox" id="sausage">
+      <label for="sausage">Sausage</label><br>
+    </div>
 
-    <h3>Premium toppings (+ $3 each) : </h3>
-    <input type="checkbox" id="chicken">
-    <label for="chicken">Chicken</label><br>
-    <input type="checkbox" id="bacon">
-    <label for="bacon">Bacon</label><br>
-    <input type="checkbox" id="sausage">
-    <label for="sausage">Sausage</label><br>
+    <div class="free">
+      <h3>Free Toppings</h3>
+      <input type="checkbox" id="peppers">
+      <label for="peppers">Peppers</label><br>
+      <input type="checkbox" id="spinach">
+      <label for="spinach">Spinach</label><br>
+      <input type="checkbox" id="onions">
+      <label for="onions">Onions</label><br>
+    </div> 
 
-    <h3>Free toppings: </h3>
-    <input type="checkbox" id="peppers">
-    <label for="peppers">Peppers</label><br>
-    <input type="checkbox" id="spinach">
-    <label for="spinach">Spinach</label><br>
-    <input type="checkbox" id="onions">
-    <label for="onions">Onions</label><br>
+    <div class="size">
+      <h3>Select your Size</h3>
+      <input type="radio" id="x-small" name="size">
+      <label for="x-small">X-Small (- $2)</label><br>
+      <input type="radio" id="small" name="size">
+      <label for="small">Small</label><br>
+      <input type="radio" id="medium" name="size" checked>
+      <label for="medium">Medium</label><br>
+      <input type="radio" id="large" name="size">
+      <label for="large">Large</label><br>
+      <input type="radio" id="x-large" name="size">
+      <label for="x-large">X-Large (+ $2)</label><br><br>
+  </div>
 
-    <h3>Select your Size: </h3>
-    <input type="radio" id="x-small" name="size">
-    <label for="x-small">X-Small (- $2)</label><br>
-    <input type="radio" id="small" name="size">
-    <label for="small">Small</label><br>
-    <input type="radio" id="medium" name="size" checked>
-    <label for="medium">Medium</label><br>
-    <input type="radio" id="large" name="size">
-    <label for="large">Large</label><br>
-    <input type="radio" id="x-large" name="size">
-    <label for="x-large">X-Large (+ $2)</label><br><br>
-
-    <button type="submit">See your total</button>
+    <button id="button" type="submit">See your total</button>
   </form>
 
   <div id="order-total">
