WIP: add functions that hide and show image on submit and reset

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body>
   <h1 id="header">Papa's Pizza</h1>
+
   <form id="pizza-order">
     <div class="toppings">
       <h3>Choose Your Toppings (+ $1 each)</h3>
@@ -53,13 +54,17 @@
       <label for="large">Large</label><br>
       <input type="radio" id="x-large" name="size">
       <label for="x-large">X-Large (+ $2)</label><br><br>
-  </div>
+    </div>
 
     <button id="button" type="submit">See your total</button>
+  
   </form>
-
   <div id="order-total">
     <h3><span id="total"></span></h3>
+    <img id="hidden" src="img/pizzatime.jpg" alt="pizza time" >
   </div>
+
+  
+  
 </body>
 </html>
