add image and text to appear when button is submitted

--- a/index.html
+++ b/index.html
@@ -61,7 +61,10 @@
   </form>
   <div id="order-total">
     <h3><span id="total"></span></h3>
-    <img id="hidden" src="img/pizzatime.jpg" alt="pizza time" >
+    <div id="hidden" class="hidden">
+    <img src="img/pizzatime.jpg" alt="pizza time">
+    <p>Don't worry, he's late. You don't have to pay for that.</p>
+    </div>
   </div>
 
   
