--- a/index.html
+++ b/index.html
@@ -57,13 +57,15 @@
     </div>
 
     <button id="button" type="submit">See your total</button>
+    <button id="hidden" class="hidden" type="submit">Get Another Pizza</button>
   
   </form>
   <div id="order-total">
     <h3><span id="total"></span></h3>
     <div id="hidden" class="hidden">
-    <img src="img/pizzatime.jpg" alt="pizza time">
-    <p>Don't worry, he's late. You don't have to pay for that.</p>
+    
+      <img src="img/pizzatime.jpg" alt="pizza time">
+      <p>Don't worry, he's late. You don't have to pay for that.</p>
     </div>
   </div>
 
