include all started functions of the multiple pizza functionality

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <form id="pizza-order">
     <div class="toppings">
-      <h3>Choose Your Toppings (+ $1 each)</h3>
+      <h3>Toppings (+ $1 each)</h3>
       <input type="checkbox" id="cheese" name="cheese" checked>
       <label for="cheese">Extra Cheese</label><br>
       <input type="checkbox" id="pepperoni" name="pepperoni">
